force-app/main/default/objects/Costs_Per_Product__c/Costs_Per_Product__c.object-meta.xml
<CustomObject>
    <description>Junction Object to relate the different costs of a type of Product (Standard, Black, Metal, etc) and a Home Country (Denmark, France, Spain. Italy, United Kingdom, etc)</description>
    <label>Costs_Per_Product</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Costs Per Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs_Per_Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>