force-app/main/default/objects/Costs_Per_Product__c/fields/ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee__c</fullName>
    <description>ATM Fee in other currencies</description>
    <label>ATM Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>