force-app/main/default/objects/Costs_Per_Product__c/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <description>Card Replacement Cost</description>
    <label>Card Replacement Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>