force-app/main/default/objects/Costs_Per_Product__c/fields/Cost_per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Calendar_Month__c</fullName>
    <description>Cost per Calendar Month</description>
    <label>Cost per Calendar Month</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>