force-app/main/default/objects/Costs_Per_Product__c/fields/Currency_Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Iso_Code__c</fullName>
    <formula>IF(ISPICKVAL(Country__c, &apos;UK&apos;),&apos;GBP&apos;, &apos;EUR&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency_Iso_Code</label>
    <type>Text</type>
</CustomField>