force-app/main/default/objects/Costs_Per_Product__c/fields/Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product__c</fullName>
    <label>Custom Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Costs</relationshipLabel>
    <relationshipName>Costs_Per_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>