force-app/main/default/objects/Costs_Per_Product__c/fields/Special_Package__c.field-meta.xml
<CustomField>
    <fullName>Special_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is special package?</description>
    <label>Special Package</label>
    <type>Checkbox</type>
</CustomField>